--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -107,10 +107,10 @@
 	    {\fontsize{14}{20} \textit{Presentan}}\\
 	    {\fontsize{14}{20} \textbf{Eder Jonathan Aguirre Cruz \\ Diana Leslie González Olivier \\ \vspace{.2cm} Jhonatan Saulés Cortés }}\vspace{2.5cm}\\
 	    {\fontsize{14}{20} \textit{Directora}}\\
-	    {\fontsize{14}{20} \textbf{Dra. Sandra D\'\i az Santiago}}\vspace{4.5cm}\\
+	    {\fontsize{14}{20} \textbf{Dra. Sandra D\'\i az Santiago}}   \vspace{3cm}
 	    \end{center}
 
-	    \hfill  \fontsize{14}{20} \textbf{Mayo 2017}
+	       \hfill   \fontsize{14}{20}  \textbf{Mayo 2017} 
 	    
 	}
 \end{titlepage}
