--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -1,6 +1,28 @@
 %\chapter{Introducci\'on} % (fold)
 %\label{cha:introduccion}
 %\addcontentsline{toc}{chapter}{Introducción}
+\section{Definiciones, acrónimos y abreviaturas}
+
+\textbf{Acrónimos}
+\begin{itemize}
+\item HP: Hewllet-Packard.
+\item DupLESS: Server-Aided Encryption for Deduplicated Storage (Cifrado Asistido por un Servidor para Almacenamiento Sin Duplicados).
+\item ABS: The Apportioned Backup System (Sistema de Respaldo Asignado).
+\item SIGOPS: Special Interest Group on Operating Systems (Grupo de Interés Especial sobre Sistemas Operativos).
+\item TahoeFS: The Least-Authority Filesystem (Sistema de Archivos de Menor Autoridad).
+\item AES: Advanced Encryption Standard (Estándar de Cifrado Avanzado).
+\item DES: Data Encryption Standard (Estándar de Cifrado de Datos).
+\item RSA: Rivest Shamir Adleman.
+\item MD: Message Digest (Resumen del Mensaje).
+\item SHA: Secure Hash Algorithm (Algoritmo Seguro de Hash).
+\item NIST: National Institute of Standards and Technology (Instituto Nacional de Estándares y Tecnología).
+\item SaaS: Software as a Service (Software como Servicio).
+\item PaaS: Platform as a Service (Plataforma como Servicio).
+\item IaaS: Infracstructure as a Service (Infraestructura como Servicio).
+\item API: Application Programming Interface (Interfaz de Programación de Aplicaciones).
+\item BPMN: Business Process Model and Notation (Modelo de Proceso Empresarial y Notación). 
+\end{itemize}
+
 \section{Contexto}
 
 En el nuevo ambiente de las tecnologías de la información se encuentran los usuarios de estas tecnologías y las organizaciones, cualquier movimiento de almacenamiento masivo puede ser realizado mediante  modelos basados en el cómputo nube, es decir, el almacenamiento en la nube. Asimismo, al manejar un gran volumen de información, los usuarios buscan la posibilidad de que al almacenar esos datos puedan ser accedidos a ellos de manera fácil~\cite{Nubei}. \\ \\ 
