--- a/TT-2016-B045/archivosTex/analisisydiseno.tex
+++ b/TT-2016-B045/archivosTex/analisisydiseno.tex
@@ -303,3 +303,5 @@ RNF4 & Mantenibilidad & \begin{itemize}
 \caption{Requerimientos no funcionales del sistema}
 \label{Servidor de Llaves }
 \end{longtable}
+
+\section{Casos de Uso}
