--- a/TT-2016-B045/casosUso/Servidor/CUSLL1.tex
+++ b/TT-2016-B045/casosUso/Servidor/CUSLL1.tex
@@ -22,11 +22,11 @@
 	\UCitem{Precondiciones}{}
 	\UCitem{Postcondiciones}{El servidor de llaves esta listo para realizar formas a ciegas de archivos a almacenar}
 	\UCitem{Reglas del negocio}{
-		\begin{itemize}	
-			\item \BRref{RN-E1}{Alumno inscrito} 
-			\item \BRref{RN-E4}{Calificación} 
-			\item \BRref{RN-E6}{Calificación registrada}
-		\end{itemize}
+		%\begin{itemize}	
+		%	\item \BRref{RN-E1}{Alumno inscrito} 
+		%	\item \BRref{RN-E4}{Calificación} 
+		%	\item \BRref{RN-E6}{Calificación registrada}
+		%\end{itemize}
 		}
 	\UCitem{Mensajes}{
 		\begin{itemize}	
