--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -136,11 +136,14 @@
 \chapter{Análisis y diseño}
 
 \cfinput{archivosTex/analisisydiseno}
-
-%------------------------------------------------------------------------------------------------------------------------------------
-\chapter{Casos de Uso}
-
 \cfinput{casosUso/Servidor/CUSLLIndex}
+\cfinput{casosUso/Nube/CUNIndex}
+\newpage
+%------------------------------------------------------------------------------------------------------------------------------------
+
+%\chapter{Casos de Uso}
+
+
 
 %\include{archivosTex/requerimientos}
 %\include{archivosTex/adv-clasificadores}
@@ -149,7 +152,6 @@
 %\include{archivosTex/conclusiones2}
 %\include{archivosTex/anexos}
 
-%\include{casosUso/Servidor/CUEIndex}
 \backmatter
 \addcontentsline{toc}{chapter}{Bibliograf\'ia}
 \bibliographystyle{abbrv} %{plain}
