--- a/TT-2016-B045/usecases.sty
+++ b/TT-2016-B045/usecases.sty
@@ -139,7 +139,7 @@
 %   ...
 % \end{UseCase}
 \newenvironment{UseCase}[4][default]
-{%\newpage%
+{\newpage%
 \noindent\hypertarget{#2}{\includegraphics[width=1.1\textwidth]{images/uc/#1}}%
 \section{#2 #3}%
 \subsection{Descripción completa}%
