--- a/TT-2016-B045/casosUso/Nube/CUN3.tex
+++ b/TT-2016-B045/casosUso/Nube/CUN3.tex
@@ -46,7 +46,7 @@
 	\UCpaso [\UCactor] Envía la función hash del archivo \textit{H(C1)}.
 	\UCpaso Recibe la función hash del archivo \textit{H(C1)} a almacenar y corrobora la inexistencia de esta. \Trayref{A}
 	\UCpaso Solicita los archivos cifrados a almacenar \textit{C1} y \textit{C2}.
-	\UCpaso [\UCactor] Selecciona de su carpeta personal los archivos \textit{C1} y \textit{C2} que va almacenar en la nube.
+	\UCpaso [\UCactor] Selecciona de su carpeta personal los archivos \textit{C1} y \textit{C2} y da clic en el botón \IUbuttonAceptar.
 	\UCpaso Almacena los archivos \textit{C1} y \textit{C2} en la nube. 
 	\UCpaso Asocia la función hash \textit{H(C1)} al usuario con el archivo \textit{C1} y \textit{C2}. 
 	\UCpaso Actualiza la lista de usuarios y archivos almacenados en la nube. \label{CUN3Regreso}
