--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -138,6 +138,7 @@
 \cfinput{archivosTex/analisisydiseno}
 \cfinput{casosUso/Servidor/CUSLLIndex}
 \cfinput{casosUso/Nube/CUNIndex}
+\cfinput{casosUso/Cliente/CUCLIndex}
 \newpage
 %------------------------------------------------------------------------------------------------------------------------------------
 
