--- a/TT-2016-B045/archivosTex/analisisydiseno.tex
+++ b/TT-2016-B045/archivosTex/analisisydiseno.tex
@@ -28,7 +28,7 @@ Modifica los datos de un documento con el objeto de alcanzar algunas caracterís
 \section{Arquitectura del sistema. }
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=10cm]{./images/Arquitectura.png}
+	\includegraphics[width=16cm, height=12cm]{./images/Arquitectura.jpg}
 	\caption{Arquitectura del sistema.}
 
 \end{figure}
