--- a/TT-2016-B045/archivosTex/analisisydiseno.tex
+++ b/TT-2016-B045/archivosTex/analisisydiseno.tex
@@ -321,4 +321,59 @@ RNF4 & Mantenibilidad & \begin{itemize}
 	\BRitem[Tipo:] Restricción de operación.	
 \end{BussinesRule}
 
+\section{Especificación de Plataforma}
+
+
+\textbf{Servidor web}
+\begin{enumerate}
+\item \textbf{Hardware}
+\begin{itemize}
+\item Procesador: Intel Xeon 1220
+\item RAM: 4 GB DDR3 1600 MHz
+\end{itemize}
+\item \textbf{Software}
+\begin{itemize}
+\item Sistema operativo: Debian 8 Jessie 64 bits
+\item Servidor web: Apache 2
+\begin{itemize}
+\item Módulo PHP 5 con conector para MongoDB
+\end{itemize}
+\item Servidor de base de datos: MongoDB 3.2
+\end{itemize}
+\item \textbf{Red}
+\begin{itemize}
+\item Conexión a internet cableada de 20 Mb/s
+\end{itemize}
+\end{enumerate}
+
+\textbf{Estación de trabajo y computadores personales}
+\begin{enumerate}
+\item \textbf{Hardware}
+\begin{itemize}
+\item Procesador: Intel Celeron N2840 o superior
+\item RAM: 2 GB o superior
+\end{itemize}
+\item \textbf{Software}
+\begin{itemize}
+\item Navegador Web: Chrome 24, Firefox 24, Internet Explorer 10, Safari 7 o superior.
+\begin{itemize}
+\item Soporte para cookies
+\end{itemize}
+\end{itemize}
+
+\item \textbf{Red}
+\begin{itemize}
+\item Conexión a internet de 2 Mb/s
+\end{itemize}
+
+\end{enumerate}
+
+\newpage
+
 \section{Casos de Uso}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=0.8\textwidth]{images/CasosDeUso}
+		\caption{Diagrama de Casos de Uso del sistema.}
+	\end{figure}
